create github pages

--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header1 cid-s4kHnjEoKM" id="header16-7">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header1 cid-s4kHnjEoKM" id="header16-7">
 
     
 
@@ -254,7 +254,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gaINkWogjRJov5phk5pnsvF6UKpmsEfRTBkPfztSi7G+t3f2HZ26pwZUFVE4oHDOetFKU4eMJTC++yo+lGVGnB68AxQ4fGnsccqvc3hXnn01EDEnIYivGNoTvhwTbZqG">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sKSqlKDtnJ9TtshMBvgRDnp8o91BG7qNrgSZXnZ41T0yhv5gKXBBjHUJb7rwEkeHs1Xd6qqcf8Vupt16BWycYNWGJFTpZnsnWJYq6L6EFOCxiORKpaazrWLR/FtyAWGE">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
