create github pages

--- a/page2.html
+++ b/page2.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header1 cid-s4lnRPaLhW" id="header16-p">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="header1 cid-s4lnRPaLhW" id="header16-p">
 
     
 
@@ -133,26 +133,23 @@
                 <h5 class="pb-3">
                     Addresse
                 </h5>
-                <p class="mbr-text">
-                    1234 Straßenname
-                    <br>Stadt , AA 99999
-                </p>
+                <p class="mbr-text">Next Tuna GmbH
+<br>Londoner Str. 3
+<br>60327 Frankfurt am Main, Germany</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Kontakte
                 </h5>
-                <p class="mbr-text">
-                    E-Mail: support@mobirise.com
-                    <br>Tel: +1 (0) 000 0000 001
-                    <br>Fax: +1 (0) 000 0000 002
-                </p>
+                <p class="mbr-text">E-Mail: mail@nexttuna.com
+<br>Tel: +1 (0) 000 0000 001
+<br>Fax: +1 (0) 000 0000 002&nbsp;</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><a class="text-primary" href="page2.html">Impressum</a><br><a class="text-primary" href="https://mobirise.co/">P</a>rivacy policy</p>
+                <p class="mbr-text"><a class="text-success" href="page2.html">Impressum</a><br><a class="text-primary" href="https://mobirise.co/">P</a>rivacy policy</p>
             </div>
         </div>
         <div class="footer-lower">
