create github pages

--- a/page2.html
+++ b/page2.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="header1 cid-s4lnRPaLhW" id="header16-p">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header1 cid-s4lnRPaLhW" id="header16-p">
 
     
 
@@ -149,7 +149,7 @@
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><a class="text-success" href="page2.html">Impressum</a><br><a class="text-primary" href="https://mobirise.co/">P</a>rivacy policy</p>
+                <p class="mbr-text"><a class="text-success" href="page2.html">Impressum</a><br><a class="text-success" href="page3.html">Privacy policy</a></p>
             </div>
         </div>
         <div class="footer-lower">
