--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="header1 cid-s4kHnjEoKM" id="header16-7">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header1 cid-s4kHnjEoKM" id="header16-7">
 
     
 
@@ -254,7 +254,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="El8CEXoVO6zcA6mP0T7CYNgkULMxRFOxQI5eb/UNnj0Z6+6/wPZY/pmDALvbKWHL76DBZCcaZ9mkzpskVzsSJrEAP8yJHV5NHQcsp8lROqiaY7lZvWmbtI1AgXljjWE5">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="W2/X7cf2ey5WWQJ1cJhUGQhvi6WdXhy0mm7oZ5asMsmrKfym9vMJOI+k3Ef7T/A7HLK9wWXxHBDA6dsMbr+TiPZ33WS+KbB+HvmvCLdGOiCb05VcWoCMxRXRucyVgucP">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
