--- a/page3.html
+++ b/page3.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-s4lqAEp1JP" id="header16-y">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-s4lqAEp1JP" id="header16-y">
 
     
 
@@ -279,7 +279,7 @@
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><a class="text-primary" href="page2.html">Impressum</a><br><a class="text-primary" href="https://mobirise.co/">P</a>rivacy policy</p>
+                <p class="mbr-text"><a class="text-success" href="page2.html">Impressum</a><br><a class="text-success" href="page3.html">Privacy policy</a></p>
             </div>
         </div>
         <div class="footer-lower">
