--- a/page1.html
+++ b/page1.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header1 cid-s4kHnjEoKM" id="header16-7">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-s4kHnjEoKM" id="header16-7">
 
     
 
@@ -252,7 +252,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ixo6CCWQirx9KopAxxo5KYtsr9Xkg1tbkV6ZF8K6JV8xSUjz0Y547HHSr13d5lAXur1PTyRhCAvdgk9RXqq3CKlYxBbRBVesSS1fGUvy4lNHhAONPjdg2U14sGTunjtI">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="u7vqGkkxdu5jaWz6UwpvUyVo4pK2thK0eu+iQws68M+mPYPPM2GI2eKU30DPmV7vJJir7q2DgXx/1DO+RFk12/i93AZxTepcZtsiEXbYBtxS2PWGVgkrOqAEnyKj6mCw">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
