--- a/page1.html
+++ b/page1.html
@@ -29,7 +29,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center collapsed bg-color transparent">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center collapsed">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-s4kHnjEoKM" id="header16-7">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-s4kHnjEoKM" id="header16-7">
 
     
 
@@ -252,7 +252,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="u7vqGkkxdu5jaWz6UwpvUyVo4pK2thK0eu+iQws68M+mPYPPM2GI2eKU30DPmV7vJJir7q2DgXx/1DO+RFk12/i93AZxTepcZtsiEXbYBtxS2PWGVgkrOqAEnyKj6mCw">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="icZx+4XB9KW2MPN6h7N+mbHKV7AaO6dUpMOlWbK7FX7woPEu5aKZkXpKU4sjiSwcKIsa2w9K/yv2Fly0yvwM0MikOxTkYkRCRjSUQUA3khy1hi2jpC3EtN5du5v9aLKT">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
