create github pages

--- a/page2.html
+++ b/page2.html
@@ -43,7 +43,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header3 cid-s4lnRQdpqX" id="header3-q">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header3 cid-s4lnRQdpqX" id="header3-q">
 
     
 
@@ -101,7 +101,7 @@
                 <h5 class="pb-3">
                     Addresse
                 </h5>
-                <p class="mbr-text">Next Tuna GmbH
+                <p class="mbr-text">next tuna GmbH
 <br>Londoner Str. 3
 <br>60327 Frankfurt am Main, Germany</p>
             </div>
@@ -109,7 +109,7 @@
                 <h5 class="pb-3">
                     Kontakte
                 </h5>
-                <p class="mbr-text">E-Mail: mail@nexttuna.com
+                <p class="mbr-text">E-Mail: info@nexttuna.com
 <br>Tel: +1 (0) 000 0000 001
 <br>Fax: +1 (0) 000 0000 002&nbsp;</p>
             </div>
