--- a/page3.html
+++ b/page3.html
@@ -43,7 +43,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header3 cid-s4lqAFzXho" id="header3-z">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header3 cid-s4lqAFzXho" id="header3-z">
 
     
 
@@ -238,7 +238,7 @@
                     Kontakte
                 </h5>
                 <p class="mbr-text">
-                    E-Mail:mail@nexttuna.com
+                    E-Mail: info@nexttuna.com
                     <br>Tel: +1 (0) 000 0000 001
                     <br>Fax: +1 (0) 000 0000 002
                 </p>
