create github pages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-qTkAaeaxX5" id="footer1-2">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="cid-qTkAaeaxX5" id="footer1-2">
 
     
 
