create github pages

--- a/page2.html
+++ b/page2.html
@@ -43,7 +43,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header3 cid-s4lnRQdpqX" id="header3-q">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="header3 cid-s4lnRQdpqX" id="header3-q">
 
     
 
