create github pages

--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
     </figure>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
 
     
 
@@ -172,7 +172,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iH9StTubpsVD3kSbHfDC/bsfXKPxuqFcsP5Gd0tayY7DhMXFpb4gjijgF+tHsz+y/xy0/1lfTvLuadN5WvuzcZCke1ixohhzFDtaKxWwRnEPhiQejOByx5x3jChpQdOL">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7eDRZNRki8iN0zz0eBeyOLdfbeNpfwsZ6/mpSb1uPhW41jdXbLmP7eWzUKFT+wcbZ4SWSNK+EPwSDo/b1s5QFTOHlvnAI3P5cjRvbyNhNm+C1UyPXPwKdMcASGGt7fB0">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
