create github pages

--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
     </figure>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
 
     
 
@@ -82,7 +82,7 @@
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">Our mission</h4>
-                        <p class="mbr-text mbr-fonts-style display-4">next tuna will be the first company to complete the Atlantic Bluefin Tuna’s reproductive cycle in large-scale aquaculture. We will provide the only sustainable source of healthy Atlantic Bluefin Tuna, meeting growing global demand for this most precious tuna species.</p>
+                        <p class="mbr-text mbr-fonts-style display-4">Next Tuna will be the first company to complete the Atlantic Bluefin Tuna’s reproductive cycle in large-scale aquaculture. We will provide the only sustainable source of healthy Atlantic Bluefin Tuna, meeting growing global demand for this most precious tuna species.</p>
                     </div>
                 </div>
             </div>
@@ -113,16 +113,15 @@
     <div class="container align-right">
         <div class="row">
             <div class="mbr-white col-lg-8 col-md-7 content-container">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2"><span style="font-weight: normal;">You contact us and we will contact you.</span></h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2"><span style="font-weight: normal;">Please feel free to contact us.</span></h1>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    Use the contact form or the instant contact by phone.
-                </p>
+                    Use the contact form or send an email.</p>
             </div>
             <div class="col-lg-4 col-md-5">
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7RzyMZPhci4bCaa6ziuGEuwbXvLDjxUWF50K52BeNlxqFWfX9Rg387493Tzc5WpstZfduUO5oRHOlMjOYeenwajmyi4pI/69TIAThxOABc4SDsfyU9nFZU5qAQw3EASD">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Zb8q7KLb05sqy7JV2Y41yGRr603tb+bT2rnQAiKRwkbSdibN/yFhFOLg77oIPdM7Q4Al74vD3HSAZ0IvwUrWBM2wn3SFdyCA1UUTcDKUduSBuR2Wq+J83maCtqkotBxC">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -141,7 +140,7 @@
                                 <div data-for="message" class="col-md-12 form-group ">
                                     <textarea name="message" placeholder="Message" data-form-field="Message" class="form-control px-3 display-7" id="message-header15-l"></textarea>
                                 </div>
-                                <div class="col-md-12 input-group-btn"><button type="submit" class="btn btn-secondary btn-form display-4">SENDEN</button></div>
+                                <div class="col-md-12 input-group-btn"><button type="submit" class="btn btn-secondary btn-form display-4">SEND</button></div>
                             </div>
                         </form><!---Formbuilder Form--->
                     </div>
