create github pages

--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
     </figure>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
 
     
 
@@ -121,7 +121,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pRGl2yR/vooV/MnobBsflEu/z4VGteNCDY6F9EIWFJTnx6sLbLKkCbdnIoaNJrGIz/MRfcaIXdx8gvObs3oVEvSnDpYG0RR+cmUMw03KLpeV1XYipT1yybNaarwMb/Kk">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mxgC6u2AL9l7ixAU1NNRQthrO/DoIw/dDXx/+syq6wOmeWn5LzIqWKRz8D4t3wtkeP+/I6hsJYzuoK9MRhljWvDWvROgRbtsgBCpPUcnZ3tm3jJnp6YBqZAujAa1IowB">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
