--- a/page2.html
+++ b/page2.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header3 cid-s4lnRQdpqX" id="header3-q">
+<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="header3 cid-s4lnRQdpqX" id="header3-q">
 
     
 
@@ -51,7 +51,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 15%;">
-                <img src="assets/images/logo-nexttuna-definitiu-original-1014x974.png" alt="next tuna" title="">
+                <a href="page1.html"><img src="assets/images/logo-nexttuna-definitiu-original-1014x974.png" alt="next tuna" title=""></a>
             </div>
 
             <div class="media-content">
@@ -111,7 +111,7 @@
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><a class="text-success" href="page2.html">Imprint</a><br><a class="text-success" href="page3.html">Privacy policy</a></p>
+                <p class="mbr-text"><a class="text-success" href="page2.html">Imprint</a><br><a class="text-success" href="page3.html">Privacy policy</a><br><a href="page1.html" class="text-success">Home</a></p>
             </div>
         </div>
         <div class="footer-lower">
