--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
     </figure>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-s4lwBNSf8F" id="content5-1h">
 
     
 
@@ -70,7 +70,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">The issue</h4>
-                        <p class="mbr-text mbr-fonts-style display-4">To date, tuna cannot be reproduced in aqua farms at large scale. Therefore, the EUR 36 billion global tuna market is fully based on wild catch. Wild tuna is endangered due to this unsustainable approach.</p>
+                        <p class="mbr-text mbr-fonts-style display-4">To date, tuna cannot be reproduced in aqua farms at large scale. The EUR 36 billion global tuna market is fully based on wild catch. Wild tuna is endangered due to this unsustainable approach.</p>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">Our mission</h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Next Tuna will be the first company to complete the Atlantic Bluefin Tuna’s reproductive cycle in large-scale aquaculture. We will provide the only sustainable source of healthy Atlantic Bluefin Tuna, meeting growing global demand for this most precious tuna species.</p>
+                        <p class="mbr-text mbr-fonts-style display-4">Next Tuna will be the first company to complete the Atlantic Bluefin Tuna’s reproductive cycle in large-scale aquaculture. We will provide the only sustainable source of healthy Atlantic Bluefin Tuna, meeting growing demand for this most precious tuna species.</p>
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mxgC6u2AL9l7ixAU1NNRQthrO/DoIw/dDXx/+syq6wOmeWn5LzIqWKRz8D4t3wtkeP+/I6hsJYzuoK9MRhljWvDWvROgRbtsgBCpPUcnZ3tm3jJnp6YBqZAujAa1IowB">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zNjo7CQYXp7mQvjUxJS60znewC6dyZVtehNfJGMD0iFrGcgPJBkPkWXXvhIY14wK9M7LU9mqdeFUVtdB9cun+gj5QS87boYQ1Ei+JngEzbhj4JXNE8SAThSNUwwPhlEN">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
